@@ -8,6 +8,7 @@ Revision history for Perl module TestRail::API
     - Fix warnings when testrail-results encounters 'assigned' results
     - make --cachefile a multi argument in testrail-results
     - add the --perfile argument to testrail-results
+    - add the --merged argument to testrail-results
 
 0.038 2017-01-23 TEODESIAN
     - Optimize TestRail::Utils::Find::getResults and testrail-results
